--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.80.0",
     "cheerio": "^1.1.2",
+    "dompurify": "^3.3.0",
     "dotenv": "^17.2.3",
+    "lucide-react": "^0.553.0",
     "marked": "^16.4.1",
     "next": "16.0.1",
     "node-fetch": "^3.3.2",
