--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "marked": "^16.4.1",
     "next": "16.0.1",
     "node-fetch": "^3.3.2",
+    "openai": "^6.9.1",
     "pino": "^10.1.0",
     "prisma": "^6.18.0",
     "puppeteer": "^24.29.0",
